--- a/jiyukenkyu_app/templates/header.html
+++ b/jiyukenkyu_app/templates/header.html
@@ -1,21 +1,23 @@
 <header>
-    <nav class="navbar navbar-light bg-light fixed-top">
-        <!-- タイトル -->
-        <a class="navbar-brand" href="#">RPC Presentation App</a>
-        <!-- ハンバーガーメニュー -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- ナビゲーションメニュー -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'app:create' %}">発表を追加する</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:list' %}">一覧をみる</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar navbar-light bg-light fixed-top">
+    <!-- タイトル -->
+    <a class="navbar-brand" href="#">RPC Presentation App</a>
+    <!-- ハンバーガーメニュー -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- ナビゲーションメニュー -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'app:create' %}">発表を追加する</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'app:list' %}">一覧をみる</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
