--- a/jiyukenkyu_app/templates/list.html
+++ b/jiyukenkyu_app/templates/list.html
@@ -1,10 +1,10 @@
-{% extends 'common.html' %}
+{% extends "common.html" %}
 {% block content %}
-<div class="list-container">
-  <h4 class="mt-4 border-bottom">
-    {{list_title}}
-  </h4>
-  <div class="obj-count">{{count}}</div>
+  <div class="list-container">
+    <h4 class="mt-4 border-bottom">
+      {{list_title}}
+    </h4>
+    <div class="obj-count">{{count}}</div>
     <table class="table table-striped table-bordered">
       <thead>
         <tr>
@@ -18,37 +18,36 @@
       </thead>
       <tbody>
         {% for obj in object_list %}
-        <tr>
-          <td>{{ obj.presented_at }}</td>
-          <td>{{ obj.presenter }}</td>
-          <td>{{ obj.get_category_display }}</td>
-          <td>{{ obj.theme }}</td>
-          <td>
-            {% if obj.is_presented %}
-              <div class="after_presentation">
-                {{after_presentation}}
-              </div>
-            {% else %}
-              <div class="before_presentation">
-                {{before_presentation}}
-              </div>
-            {% endif %}
-          </td>
-          <td class="event-cell">
-            <a href="{% url 'app:detail' obj.id %}" class="btn btn-outline-info btn-sm">
-              <i class="fas fa-file-alt"></i>
-              {{detail_btn}}
-            </a>
-            <a href="{% url 'app:update' obj.id %}" class="btn btn-outline-success btn-sm">
-              <i class="fas fa-edit"></i>
-              {{modify_btn}}
-            </a>
-            <a href="{% url 'app:delete' obj.id %}" class="btn btn-outline-danger btn-sm">
-              <i class="fas fa-trash-alt"></i>
-              {{delete_btn}}
-            </a>
-          </td>
-        </tr>
+          <tr>
+            <td>{{ obj.presented_at }}</td>
+            <td>{{ obj.presenter }}</td>
+            <td>{{ obj.get_category_display }}</td>
+            <td>{{ obj.theme }}</td>
+            <td>
+              {% if obj.is_presented %}
+                <div class="after_presentation">
+                  {{after_presentation}}
+                </div>
+              {% else %}
+                <div class="before_presentation">
+                  {{before_presentation}}</div>
+              {% endif %}
+            </td>
+            <td class="event-cell">
+              <a href="{% url 'app:detail' obj.id %}" class="btn btn-outline-info btn-sm">
+                <i class="fas fa-file-alt"></i>
+                {{detail_btn}}
+              </a>
+              <a href="{% url 'app:update' obj.id %}" class="btn btn-outline-success btn-sm">
+                <i class="fas fa-edit"></i>
+                {{modify_btn}}
+              </a>
+              <a href="{% url 'app:delete' obj.id %}" class="btn btn-outline-danger btn-sm">
+                <i class="fas fa-trash-alt"></i>
+                {{delete_btn}}
+              </a>
+            </td>
+          </tr>
         {% endfor %}
       </tbody>
     </table>
@@ -58,5 +57,5 @@
         {{add_btn}}
       </a>
     </div>
-</div>
+  </div>
 {% endblock %}
